# wfcpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  requirements.txt
.github/workflows/: test-main.yml
app/: .gitignore  app.py
core/: CMakeLists.txt
core/inc/: overlapping_model.hpp  propagator.hpp  wave.hpp  wfc_core.hpp  wfc_def.hpp
core/inc/utils/: allocator.hpp  array.hpp  color.hpp
core/src/: mod.pybind11.cpp  propagator.cpp  wave.cpp  wfc_core.cpp
test/: test_1_main.py  test_2_time.py
test/samples/: samples.xml
